# Cemini_automation_project

./: .gitignore  README.md  conftest.py  index.html  pyproject.toml  pytest.ini
.github/workflows/: playwright.yml
10/: index.html
10/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
11/: index.html
12/: index.html
13/: index.html
14/: index.html
15/: index.html
16/: index.html
17/: index.html
18/: index.html
9/: index.html
core/: logger.py  settings.py
data/: models.py
docs/: 00_PROJECT_PLAN.md  01_MODERN_STACK_EXPLANATION.md  02_PROJECT_INIT.md  03_POETRY_AND_DEPS.md  04_CONFIG_AND_ENV.md  05_PYTEST_AND_FIXTURES.md  06_FIRST_TEST.md  07_PAGE_OBJECT_MODEL.md  08_FIXTURES_AND_DI.md  09_CART_PAGE_AND_TYPING.md  10_E2E_SKELETON_AND_DEBUGGING.md  11_REPORTING_AND_TRACES.md  12_ALLURE_PLAYWRIGHT_INTEGRATION.md  13_DATA_MODELS_AND_SETTINGS_SETUP.md  14_GIT_AND_CICD_CHEATSHEET.md  15_CI_CD_AND_SECRETS_CHEATSHEET.md  16_LOGGING_LOGURU.md  17_VSCODE_AUTOCOMPLETE.md  18_API_TESTING_AND_LOGIN_BYPASS.md  19_FASTAPI_MOCK_SERVER.md  20_ALLURE_GITHUB_PAGES.md  21_CI_CD_TROUBLESHOOTING.md  22_PARALLEL_EXECUTION_XDIST.md  README.md
last-history/: categories-trend.json  duration-trend.json
mock_server/: main.py
pages/: base_page.py  cart_page.py  checkout_complete_page.py  checkout_overview_page.py  checkout_page.py  inventory_page.py  login_page.py
tests/: _test_login_no_pom.py  test_api_bypass.py  test_e2e.py  test_login.py  test_mock_api.py
(+263 files in other folders)
