[project]
name = "cemini-automation-project"
version = "0.1.0"
description = "Enterprise QA Automation"
authors = [
    {name = "Dmitrij Erastov"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-playwright (>=0.8.0,<0.9.0)",
    "allure-pytest (>=2.16.0,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi (>=0.138.1,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "pytest-xdist (>=3.8.0,<4.0.0)"
]
